# chit

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PROCESSES.md  PULL_REQUEST_TEMPLATE.md  README.md  Todo.md  alternatives.json  azure-pipelines.yml
ci/: azure-install-rust.yml  azure-publish-artifact.yml
research/: crates_of_user.json  create.json  github.json  owners.json  research.md
src/: crates.rs  details.rs  extract.rs  format.rs  main.rs  meta.rs  owners.rs  versions.rs
src/chit/: crates.rs  details.rs  extract.rs  format.rs  mod.rs  owners.rs  repo.rs  unsafe_check.rs  versions.rs
src/chit/details/: mod.rs
src/chit/details/alternatives/: mod.rs
src/chit/extract/: mod.rs  owners.rs  package.rs  repo.rs
src/chit/sources/: crates.rs  github.rs  mod.rs
