[package]
name = "chit"
version = "0.1.5"
authors = ["Peter Heesterman <heesterman.peter@gmail.com>"]
edition = "2018"

description = "Crate help in terminal: A tool for looking up details about rust crates without going to crates.io"
repository = "https://github.com/peterheesterman/chit"
readme = "./README.md"
keywords = ["crates", "search", "who", "list"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
colored = "1.7"
reqwest = "0.9"
serde_json = "1.0"
clap = '2.32'