[package]
name = "chit"
version = "0.1.15"
authors = ["Peter Heesterman <heesterman.peter@gmail.com>"]
edition = "2018"

description = "Crate help in terminal: A tool for looking up details about rust crates without going to crates.io"
repository = "https://github.com/peterheesterman/chit"
readme = "./README.md"
keywords = ["crates", "search", "who", "list"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
colored = "1.7"
hyphenation = "0.7.1"
reqwest = "0.9"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
textwrap = { version = "0.11", features = ["hyphenation"] }
clap = '2.32'
openssl = { version = '0.10.11', optional = true }

[features]
vendored-openssl = ['openssl/vendored']
